--- a/MovieInfo1.html
+++ b/MovieInfo1.html
@@ -18,7 +18,7 @@
             <a href="watchlist.html"><button>Add to WatchList</button></a>
             <a href="index.html"><button>Sign out</button></a>
         </div>
-        <div><a href="MovieInfo1.html"><img src="1.jpg" class="img"></a></div>
+        <div><a href="MovieInfo1.html"><img src="./1.jpg" class="img"></a></div>
         
     </div> 
 </div> 
