--- a/MovieInfo2.html
+++ b/MovieInfo2.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="MovieInfoStyles.css" />
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="./favicon.png">
     <title>Streamify</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <a href="index.html"><button>Sign out</button></a>
     </div>
     <div class="header">
-        <div class="img"><img src="2.jpg"></div>
+        <div class="img"><img src="./2.jpg"></div>
         
         
     </div>  
