--- a/MovieInfo3.html
+++ b/MovieInfo3.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="MovieInfoStyles.css" />
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="./favicon.png">
     <title>Streamify</title>
 </head>
 <body>
     <div class="header">
-        <a><img src="3.jpg"></a>
+        <a><img src="./3.jpg"></a>
         <div>
             <a href="SignUp.html"><button>Join Now</button></a>
             <a href="watchlist.html"><button>Add to WatchList</button></a>
