--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Streamify</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="./favicon.png">
 </head>
 <body>
     <header>
@@ -62,14 +62,14 @@ Get ready for an unforgettable cinematic journey</pre>
             </div>
 
             <div>
-                <img src="tv.jpg" alt="Image" class="image">
+                <img src="./tv.jpg" alt="Image" class="image">
             </div>
 
         </div>
         <br>
         <div class="gridcontainer2">
             <div>
-                <img src="popcorn.jpg" class="popcorn">
+                <img src="./popcorn.jpg" class="popcorn">
 
             </div>
             <div class="content"><h1>Spend your time enjoying movies.</h1>
