--- a/watchlist.html
+++ b/watchlist.html
@@ -17,25 +17,25 @@
     </div>
    <h3 class="title">Recently added</h3>
     <div class="div">
-        <a href="movie.html"><img src="1.jpg" alt="image" class="image"></a>
-        <a href=""></a><img src="2.jpg" alt="image" class="image"></a>
-        <a href=""></a><img src="3.jpg" alt="image" class="image"></a>
-        <a href=""></a><img src="4.jpg" alt="image" class="image"></a>
+        <a href="movie.html"><img src="./1.jpg" alt="image" class="image"></a>
+        <a href=""></a><img src="./2.jpg" alt="image" class="image"></a>
+        <a href=""></a><img src="./3.jpg" alt="image" class="image"></a>
+        <a href=""></a><img src="./4.jpg" alt="image" class="image"></a>
     </div>
     <h3 class="title">Continue Watching</h3>
     <div class="div">
-        <a href=""></a><img src="5.jpg" alt="image" class="image"></a>
-        <a href=""></a><img src="6.jpg" alt="image" class="image"></a>
-        <a href=""></a><img src="7.jpg" alt="image" class="image"></a>
-        <a href=""></a><img src="8.jpg" alt="image" class="image"></a>
+        <a href=""></a><img src="./5.jpg" alt="image" class="image"></a>
+        <a href=""></a><img src="./6.jpg" alt="image" class="image"></a>
+        <a href=""></a><img src="./7.jpg" alt="image" class="image"></a>
+        <a href=""></a><img src="./8.jpg" alt="image" class="image"></a>
 
     </div>
     <h3 class="title">Your favourites</h3>
     <div class="div">
-        <a href=""></a><img src="9.jpg" alt="image" class="image"></a>
-        <a href=""></a><img src="10.jpg" alt="image" class="image"></a>
-        <a href=""></a><img src="11.jpg" alt="image" class="image"></a>
-        <a href=""></a><img src="12.jpg" alt="image" class="image"></a>
+        <a href=""></a><img src="./9.jpg" alt="image" class="image"></a>
+        <a href=""></a><img src="./10.jpg" alt="image" class="image"></a>
+        <a href=""></a><img src="./11.jpg" alt="image" class="image"></a>
+        <a href=""></a><img src="./12.jpg" alt="image" class="image"></a>
     </div>
     
 </body>
